src/test/ui/resolve/issue-21221-1.stderr
error[E0405]: unresolved trait `Mul`
  --> $DIR/issue-21221-1.rs:53:6
   |
53 | impl Mul for Foo {
   |      ^^^ no resolution found
   |
   = help: possible candidates are found in other modules, you can import them into scope:
   = help:   `use mul1::Mul;`
   = help:   `use mul2::Mul;`
   = help:   `use std::ops::Mul;`

error[E0412]: unresolved type `Mul`
  --> $DIR/issue-21221-1.rs:72:16
   |
72 | fn getMul() -> Mul {
   |                ^^^ no resolution found
   |
   = help: possible candidates are found in other modules, you can import them into scope:
   = help:   `use mul1::Mul;`
   = help:   `use mul2::Mul;`
   = help:   `use mul3::Mul;`
   = help:   `use mul4::Mul;`
   = help:   and 2 other candidates

error[E0405]: unresolved trait `ThisTraitReallyDoesntExistInAnyModuleReally`
  --> $DIR/issue-21221-1.rs:83:6
   |
83 | impl ThisTraitReallyDoesntExistInAnyModuleReally for Foo {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no resolution found

error[E0405]: unresolved trait `Div`
  --> $DIR/issue-21221-1.rs:88:6
   |
88 | impl Div for Foo {
   |      ^^^ no resolution found
   |
   = help: possible candidate is found in another module, you can import it into scope:
   = help:   `use std::ops::Div;`

error: cannot continue compilation due to previous error

